refactor: remove useless Display property from BerlinClockResponse class
